@@ -1,10 +1,10 @@
 --- #YAML:1.0
 name: Graph-Easy
-version: 0.20
+version: 0.21
 version_from: lib/Graph/Easy.pm
 license: gpl
 distribution_type: module
-generated_by: Graph-Easy version 0.20
+generated_by: Graph-Easy version 0.21
 installdirs: site
 requires:
   Graph: 0.65
